add history function

--- a/pages/canvas/canvas.wxml
+++ b/pages/canvas/canvas.wxml
@@ -1,4 +1,5 @@
 <view  wx:if="{{show==true}}" >
     <canvas disable-scroll='true' style="width:100%;height:{{windowHeight}};" canvas-id="firstCanvas" catch:touchmove='touchMove' catch:touchstart='touchStart' catch:touchend='touchEnd'></canvas>
-    <button bindtap='tap'>clear</button>
+    <button class="btn" bindtap='clearAll'>clearAll</button>
+    <button class="btn" bindtap='clearOne'>clearOne</button>
 </view>
